--- a/travel/style.css
+++ b/travel/style.css
@@ -20,7 +20,7 @@
   align-items: center;
 }
 .logo {
-  width: 50px;
+  width: 80px;
   cursor: pointer;
 }
 .menu-icon {
@@ -52,12 +52,17 @@ nav ul li a {
 }
 h1 {
   color: #fff;
-  font-size: 100px;
+  font-size: 50px;
+}
+.rateBtn {
+  color: #000;
+  font-size: 20px;
 }
 p {
   color: #fff;
-  font-size: 11px;
-  line-height: 15px;
+  font-size: 20px;
+
+  /* line-height: 15px; */
 }
 button {
   width: 180px;
@@ -76,25 +81,34 @@ button {
   height: 230px;
   display: inline-block;
   border-radius: 10px;
-  padding: 15px 25px;
+  padding: 15px 15px;
   box-sizing: border-box;
   cursor:pointer;
-  margin: 10px 15px;
+  margin: 15px 15px;
   background-position: center;
   background-size: cover;
   transition: transform 0.5s;
 }
  .card1{
-  background-image: url(img/pic-1.png);
+  background-image: url(img/640.png);
  }
  .card2{
-  background-image: url(img/pic-2.png);
+  background-image: url(img/641.png);
  }
  .card3{
-  background-image: url(img/pic-3.png);
+  background-image: url(img/642.png);
  }
  .card4{
-  background-image: url(img/pic-4.png);
+  background-image: url(img/643.png);
+ }
+ .card5{
+  background-image: url(img/644.png);
+ }
+ .card6{
+  background-image: url(img/645.png);
+ }
+ .card7{
+  background-image: url(img/646.png);
  }
  .card:hover{
    transform: translateY(-10px);
@@ -102,6 +116,13 @@ button {
  h5{
    color: #fff;
    text-shadow: 0 0 5px #999;
+   color: rgb(255, 255, 255); /* 设置文字颜色为黑色 */
+   opacity: 0.8; /* 设置文字透明度为50% */
+   font-size: 20px;
+   background-color: #575757;
+   float:left;
+   padding: 3px;
+   border-radius: 5px;
  }
  .card p{
    text-shadow:  0 0 5px #000;
