--- a/travel/style.css
+++ b/travel/style.css
@@ -48,11 +48,12 @@ nav ul li a {
   align-items: center;
 }
 .col {
-  flex-basis:100%;
+  flex-basis:70%;
+  /* padding-left:200px; */
 }
 h1 {
   color: #fff;
-  font-size: 50px;
+  font-size: 35px;
 }
 .rateBtn {
   color: #000;
@@ -77,8 +78,8 @@ button {
   cursor: pointer;
 }
 .card{
-  width: 240px;
-  height: 230px;
+  width: 180px;
+  height: 180px;
   display: inline-block;
   border-radius: 10px;
   padding: 15px 15px;
